# uhttpc

./: .gitignore  .travis.yml  CHANGELOG.md  README.markdown  README.md  uhttpc.cabal
Network/HTTP/: MicroClient.hs
cbits/: get_posix_time.c  hs_uhttpc.h
src-exe/: uhttpc-bench.hs
